--- a/PVCTurnScale/PVCTurnScale/PVCTurnScale.vcxproj.filters
+++ b/PVCTurnScale/PVCTurnScale/PVCTurnScale.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="..\test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\main.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
